--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "impress.md.js",
   "private": false,
   "dependencies": {
-    "impress.js": "~0.5.3"
+    "impress.js": "~0.5.3",
+    "marked": "~0.3.2"
   },
   "devDependencies": {}
 }
